[package]
name = "sloth"
version = "0.2.0"
authors = ["Taras Denysenko <terrapass93@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Provides a generic wrapper struct for lazy initialization."
repository = "https://github.com/terrapass/rs-sloth"
readme = "README.md"
keywords = ["lazy", "initialization", "cache", "caching"]
categories = ["caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[badges]
travis-ci = { repository = "terrapass/rs-sloth", branch = "master" }